--- a/ProjectBDMVC/pom.xml
+++ b/ProjectBDMVC/pom.xml
@@ -12,6 +12,11 @@
         <exec.mainClass>UI.MVCDNProject</exec.mainClass>
     </properties>
         <dependencies> 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
